--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,15 @@
         "illuminate/container": "^5.2",
         "illuminate/support": "^5.2",
         "illuminate/contracts": "^5.2",
-        "illuminate/config": "^5.2"
+        "illuminate/config": "^5.2",
+        "symfony/var-dumper": "^3.0"
     },
 
     "autoload": {
       "psr-4": {
         "App\\": "app/",
         "IoCTest\\": "lib/"
-      }
+      },
+      "files": ["app/helpers.php"]
     }
 }
